--- a/server/build.gradle
+++ b/server/build.gradle
@@ -116,7 +116,9 @@ dependencies {
   testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.2'
 
   // https://mvnrepository.com/artifact/log4j/log4j
-  testCompile group: 'log4j', name: 'log4j', version: '1.2.17'
+  //testCompile group: 'log4j', name: 'log4j', version: '1.2.17'
+ // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+  compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
 
 
 
